<resources>
    <string name="app_name">CafeOrder</string>
    <string name="default_name">клиент</string>
    <string name="default_password">пароль</string>
    <string name="logo_cafe">Логотип кафе</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="hint_name">Введите имя</string>
    <string name="hint_password">Введите пароль</string>
    <string name="button_create_order">Создать заказ</string>
    <string name="warning_fill_fields">Все поля должны быть заполнены</string>
    <string name="hello_user">Привет, %s! Что будите заказывать?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="addition">Что добавить в ваш %s</string>
    <string name="milk">Молоко</string>
    <string name="sugar">Сахар</string>
    <string name="lemon">Лемон</string>
    <string name="choose_drink">Выберите вид напитка</string>
    <string name="button_send_description">Кнопка отправки заказа</string>
    <string name="order">Имя: %s\nПароль: %s\nНапиток: %s\nВид напитка: %s\n</string>
    <string name="need_additions">\"Необходимые добавки: \"</string>

    <string-array name="options_of_coffee">
        <item>Американо</item>
        <item>Эксрессо</item>
        <item>Латте</item>
    </string-array>
    <string-array name="options_of_tea">
        <item>Черный</item>
        <item>Зеленный</item>
        <item>Красный</item>
    </string-array>


</resources>